package protoImage;
syntax = "proto3";

message ProtoImage {
    bytes image = 1; 
}